<resources>
    <string name="facebook_app_id">498245270753279</string>
    <string name="fb_login_protocol_scheme">fb498245270753279</string>
    <string name="absensi_relawan">Absensi Relawan</string>
    <string name="ada">Ada</string>
    <string name="ajukan">Ajukan</string>
    <string name="ajukan_tempat">Ajukan Tempat</string>
    <string name="akan_diikuti">Akan Diikuti</string>
    <string name="alamat">Alamat</string>
    <string name="alamat_tempat_kegiatan">Alamat Tempat Kegiatan</string>
    <string name="anda_yakin_mengikuti_kegiatan_ini">Anda yakin mengikuti kegiatan ini?</string>
    <string name="app_name">WeCare</string>
    <string name="artikel">Artikel</string>
    <string name="artikel_lainnya">Artikel Lainnya</string>
    <string name="artikel_terbaik">Artikel Terbaik</string>
    <string name="baca_artikel_yuk">Baca Artikel Yuk…</string>
    <string name="batal_mengikuti">Batal Mengikuti</string>
    <string name="batalkan">Batalkan</string>
    <string name="batalkan_kampanye">Batalkan Kampanye</string>
    <string name="belum_punya_akun">Belum punya akun? </string>
    <string name="belum_terlaksana">Belum Terlaksana</string>
    <string name="berikan_komentar_kamu">Berikan Komentar Kamu…</string>
    <string name="berlangsung">Berlangsung</string>
    <string name="berlangsung_selama">Berlangsung Selama</string>
    <string name="bookmark_kegiatan">Bookmark Kegiatan</string>
    <string name="briefing">Briefing</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="buat_kampanye">Buat Kampanye</string>
    <string name="cairkan">Cairkan</string>
    <string name="cari_artikel">Cari Artikel</string>
    <string name="cari_kegiatan">Cari Kegiatan</string>
    <string name="cari_relawan">Cari Relawan</string>
    <string name="cari_tempat">Cari Tempat</string>
    <string name="daftar">Daftar</string>
    <string name="daftar_dengan_nomor_hp">Daftar dengan Nomor HP</string>
    <string name="daftar_wecare">Daftar WeCare</string>
    <string name="dari_lowercase">dari</string>
    <string name="deadline_pendaftaran">Deadline Pendaftaran</string>
    <string name="deadline_pengajuan">Deadline Pengajuan</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="deskripsi_diri">Deskripsi Diri</string>
    <string name="deskripsi_kegiatan">Deskripsi Kegiatan</string>
    <string name="deskripsi_kondisi_tempat">Deskripsi Kondisi Tempat</string>
    <string name="domisili">Domisili</string>
    <string name="donasi">Donasi</string>
    <string name="donasi_terkumpul">Donasi Terkumpul</string>
    <string name="email">Email</string>
    <string name="filter">Filter</string>
    <string name="foto_banner_kegiatan">Foto / Banner Kegiatan</string>
    <string name="foto_bukti_transfer">Foto Bukti Transfer</string>
    <string name="foto_kondisi_tempat">Foto Kondisi Tempat</string>
    <string name="foto_kegiatan">Foto Kegiatan</string>
    <string name="galang_donasi">Galang Donasi</string>
    <string name="hari">Hari</string>
    <string name="hasil_kampanye">Hasil Kampanye</string>
    <string name="home">Home</string>
    <string name="judul">Judul</string>
    <string name="ikuti">Ikuti</string>
    <string name="ikuti_kegiatan">Ikuti Kegiatan</string>
    <string name="ikutan_kegiatan_yuk">Ikutan Kegiatan Yuk…</string>
    <string name="informasi">Informasi</string>
    <string name="informasi_tambahan">Informasi Tambahan</string>
    <string name="isi_disini">Isi Disini</string>
    <string name="isi1_donasi">Silahkan melakukan transfer ke nomor rekening resmi WeCare yaitu:</string>
    <string name="isi2_donasi">Dengan alamat bank tujuan Bank Mandiri dan rekening atas nama:</string>
    <string name="isi3_donasi">Setelah transfer, silahkan melakukan validasi dengan upload bukti transfer Anda.</string>
    <string name="isi1_ketentan_khusus_ajukan_tempat">Dengan mengajukan tempat, Anda bertanggung jawab penuh atas tempat yang Anda ajukan. Data-data yang ada harus sesuai fakta.</string>
    <string name="isi2_ketentan_khusus_ajukan_tempat">Dengan mengajukan tempat, Anda akan menjadi fasilitator tempat pada kegiatan ini. Data pribadi dari akun Anda akan digunakan untuk jaminan pertanggung jawaban.</string>
    <string name="isi_laporan">Isi Laporan</string>
    <string name="isi_popup_batal_kampanye">Kamu yakin akan membatalkan kampanye kegiatanmu?</string>
    <string name="isi_popup_batal_mengikuti">Kamu yakin ingin batal mengikuti kegiatan ini?</string>
    <string name="isi_popup_ikuti_kegiatan">Kamu yakin ingin mengikuti kegiatan ini?</string>
    <string name="isi_popup_sukses_buat_kampanye">Berhasil mengajukan kampanye. Data akan divalidasi, tunggu informasi selanjutnya.</string>
    <string name="isi_popup_sukses_donasi">Proses validasi berhasil. Terima kasih telah memberikan donasi pada kegiatan ini.</string>
    <string name="isi1_prolog">Menjadi bagian dari kegiatan sosial dalam berbagi dan membantu untuk masyarakat.</string>
    <string name="isi2_prolog">Berkumpul bersama, terintegrasi untuk menjalankan kegiatan sosial dengan efektif dan menarik</string>
    <string name="isi3_prolog">Salurkan jiwa sosial, buat berbagai kegiatan amal dan jaring sukarelawan serta dana dengan mudah.</string>
    <string name="jadwal">Jadwal</string>
    <string name="jangkauan_daerah">Jangkauan Daerah</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="jumlah_peserta">Jumlah Peserta</string>
    <string name="jumlah_relawan">Jumlah Relawan</string>
    <string name="kabupaten_kota">Kabupaten / Kota</string>
    <string name="kampanye">Kampanye</string>
    <string name="kategori_kegiatan">Kategori Kegiatan</string>
    <string name="keahlian">Keahlian</string>
    <string name="kegiatan">Kegiatan</string>
    <string name="kembali">Kembali</string>
    <string name="ketersediaan_waktu">Ketersediaan Waktu</string>
    <string name="kegiatan_kampanyemu">Kegiatan Kampanyemu</string>
    <string name="kegiatan_kamu_ikuti">Kegiatan Kamu Ikuti</string>
    <string name="kegiatan_lain">Kegiatan Lain</string>
    <string name="kegiatan_terdekat">Kegiatan Terdekat</string>
    <string name="ketentuan_khusus">Ketentuan Khusus</string>
    <string name="keterkaitan_isu">Keterkaitan Isu</string>
    <string name="kirim">Kirim</string>
    <string name="komentar_artikel">Komentar Artikel</string>
    <string name="kuota_relawan">Kuota Relawan</string>
    <string name="laporan_kegiatan">Laporan Kegiatan</string>
    <string name="laporkan">Laporkan</string>
    <string name="login">Login</string>
    <string name="login_dengan_nomor_hp">Login dengan Nomor HP</string>
    <string name="logout">Logout</string>
    <string name="membuat_kampanye">Membuat Kampanye</string>
    <string name="membuka_donasi">Membuka Donasi</string>
    <string name="mencari_relawan">Mencari Relawan</string>
    <string name="mencari_tempat">Mencari Tempat</string>
    <string name="nama">Nama</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="narahubung">Narahubung</string>
    <string name="next">Next</string>
    <string name="nominal_donasi">Nominal Donasi</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="nomor_rekening">08123456789</string>
    <string name="nomor_telfon">Nomor Telfon</string>
    <string name="oke">Oke</string>
    <string name="oleh">Oleh</string>
    <string name="password">Password</string>
    <string name="pengusul_tempat">Pengusul Tempat</string>
    <string name="perlu_disiapkan">Perlu Disiapkan</string>
    <string name="perlu_disiapkan_fasilitator">Perlu Disiapkan Fasilitator</string>
    <string name="persyaratan">Persyaratan</string>
    <string name="persyaratan_relawan">Persyaratan Relawan</string>
    <string name="persyaratan_tempat">Persyaratan Tempat</string>
    <string name="peserta">Peserta</string>
    <string name="pilih_disini">Pilih Disini</string>
    <string name="poin">Poin</string>
    <string name="poin_kamu">Poin Kamu</string>
    <string name="profesi">Profesi</string>
    <string name="profile">Profile</string>
    <string name="profil_kamu">Profil Kamu</string>
    <string name="profil_relawan">Profil Relawan</string>
    <string name="rekomendasi_kegiatan">Rekomendasi Kegiatan</string>
    <string name="relawan">Relawan</string>
    <string name="rencana_kegiatan">Rencana Kegiatan</string>
    <string name="relawan_mendaftar">Relawan Mendaftar</string>
    <string name="relawan_telah_terdaftar">Relawan Telah Terdaftar</string>
    <string name="sebagai_fasilitator">Sebagai Fasilitator</string>
    <string name="sebagai_relawan">Sebagai Relawan</string>
    <string name="semua">Semua</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="sisa">Sisa</string>
    <string name="sortir">Sortir</string>
    <string name="sudah_diikuti">Sudah Diikuti</string>
    <string name="sudah_terlaksana">Sudah Terlaksana</string>
    <string name="surat_perizinan_tempat">Surat Perizinan Tempat</string>
    <string name="tambah_disini_plus">+ Tambah Disini</string>
    <string name="tanggal_mulai">Tanggal Mulai</string>
    <string name="tanggal_selesai">Tanggal Selesai</string>
    <string name="tanggal_terdekat">Tanggal Terdekat</string>
    <string name="tanggal_telah_terisi">Tanggal Telah Terisi</string>
    <string name="tempat">Tempat</string>
    <string name="tempat_yang_disetujui">Tempat Yang Disetujui</string>
    <string name="terbaru">Terbaru</string>
    <string name="terlama">Terlama</string>
    <string name="tidak">Tidak</string>
    <string name="tidak_ada">Tidak Ada</string>
    <string name="tugas_relawan">Tugas Relawan</string>
    <string name="tukar">Tukar</string>
    <string name="umur">Umur</string>
    <string name="untuk">Untuk</string>
    <string name="upload_foto">Upload Foto</string>
    <string name="urutkan">Urutkan</string>
    <string name="validasi">Validasi</string>
    <string name="voucher_tersedia">Voucher Tersedia</string>
    <string name="wecare_indonesia">WeCare Indonesia</string>
    <string name="wecare_poin">WeCare Poin</string>
    <string name="waktu">Waktu</string>
    <string name="waktu_mulai">Waktu Mulai</string>
    <string name="waktu_selesai">Waktu Selesai</string>
    <string name="warning">Warning</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="ya">Ya</string>
    <string name="yang_perlu_dibawa_relawan">Yang Perlu Dibawa Relawan</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail_act_seacrh_volunter">DetailActSeacrhVolunterActivity
    </string>
</resources>