<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_grey_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_article"
        android:icon="@drawable/ic_book_grey_24dp"
        android:title="@string/artikel"/>

    <item
        android:id="@+id/navigation_jadwal"
        android:icon="@drawable/ic_schedule_grey_24dp"
        android:title="@string/jadwal"/>

    <item
        android:id="@+id/navigation_kampanye"
        android:icon="@drawable/ic_campaign_grey_24dp"
        android:title="@string/kampanye"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_avatar_grey_24dp"
        android:title="@string/profile"/>

</menu>
