<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.create_report.CreateReportActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_15sdp">

        <LinearLayout
            android:id="@+id/linearlayout_upload_foto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/foto_kegiatan"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_14sdp"/>

            <Button
                android:id="@+id/btn_upload_foto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/box_white_dots_stroke"
                android:layout_marginTop="@dimen/_7sdp"
                android:text="@string/upload_foto"
                android:textColor="@color/colorSecondary"
                android:textAllCaps="false"
                android:drawableStart="@drawable/ic_photo_camera" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout_laporan_kegiatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearlayout_upload_foto"
            android:layout_marginTop="@dimen/_20sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/laporan_kegiatan"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_14sdp"/>

            <EditText
                android:id="@+id/et_laporan_kegiatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/isi_disini"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_create_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kirim"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:background="@drawable/btn_box_red"
            app:layout_constraintTop_toBottomOf="@id/linearlayout_laporan_kegiatan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_20sdp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>