<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".module.profile.ProfileFragment"
    android:background="@color/colorWhite">

    <View
        android:id="@+id/view_toolbar_aprofile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:background="@drawable/bg_toolbar_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativelayout_toolbar_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_15sdp">

        <TextView
            android:id="@+id/tv_profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:text="@string/profil_kamu"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_15sdp"/>

        <ImageView
            android:id="@+id/iv_edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_toLeftOf="@+id/iv_logout_profile"
            android:src="@drawable/ic_edit_grey_24dp" />

        <ImageView
            android:id="@+id/iv_logout_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logout_grey_24dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/_20sdp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/view_toolbar_aprofile"
        app:layout_constraintStart_toStartOf="@+id/view_toolbar_aprofile"
        app:layout_constraintTop_toBottomOf="@+id/relativelayout_toolbar_profile">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_user_photo"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@mipmap/img_no_picture" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_15sdp">

            <TextView
                android:id="@+id/tv_name_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_lengkap"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="@dimen/_20sdp"
                android:maxLines="1" />

            <TextView
                android:id="@+id/tv_email_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_15sdp"
                android:maxLines="1" />

            <TextView
                android:id="@+id/tv_notelp_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomor_hp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12sdp"
                android:maxLines="1"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>